# voxquant

./: CHANGELOD.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
crates/voxquant/: Cargo.toml
crates/voxquant/src/: main.rs
crates/voxquant_core/: Cargo.toml  clippy.toml
crates/voxquant_core/src/: geometry.rs  io.rs  lib.rs  scene.rs  voxelizer.rs
crates/voxquant_dotvox/: Cargo.toml
crates/voxquant_dotvox/src/: lib.rs  serialization.rs  voxelization.rs
crates/voxquant_gltf/: Cargo.toml
crates/voxquant_gltf/src/: error.rs  lib.rs
src/: geometry.rs  gltf2.rs  io.rs  lib.rs  main.rs  math.rs  octree.rs  scene.rs  voxelizer.rs
src/formats/: gltf2.rs  mod.rs  vox.rs
src/formats/magicavoxel/: mod.rs  serialization.rs  voxelization.rs
