[package]
name = "voxquant"
version = "0.3.0"
authors = ["Dawid Sz <szostid@gmail.com>"]
description = "A program to convert triangle meshes to voxels."
edition = "2024"
keywords = ["glTF", "3D", "Voxel", "magicavoxel", "dotvox", "cli"]
categories = ["command-line-utilities", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/szostid/voxquant"

[dependencies]
image = { version = "0.25", default-features = false }
gltf = { version = "1.4", default-features = false, features = [
    "import",
    "utils",
    "KHR_materials_pbrSpecularGlossiness",
] }
clap = { version = "4.5", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
quantette = { version = "0.5", optional = true }
bytemuck = "1.24"
anyhow = "1.0"
rayon = "1.11"
dot_vox = "5.2"
profiling = "1.0"

[features]
default = ["dynamic_palette"]
dynamic_palette = ["dep:quantette"]
