[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "voxquant"
version = "0.3.0"
authors = ["Dawid Sz <szostid@gmail.com>"]
description = "A program to convert triangle meshes to voxels."
edition = "2024"
keywords = ["glTF", "3D", "Voxel", "magicavoxel", "dotvox", "cli"]
categories = ["command-line-utilities", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/szostid/voxquant"

[workspace.dependencies]
voxquant_core.path = "crates/voxquant_core"
voxquant_gltf.path = "crates/voxquant_gltf"
voxquant_dotvox.path = "crates/voxquant_dotvox"

image = { version = "0.25", default-features = false }
clap = "4.5"
glam = "0.30"
quantette = "0.5"
bytemuck = "1.24"
anyhow = "1.0"
rayon = "1.11"
profiling = "1.0"
