[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "voxquant"
version = "0.4.0"
authors = ["Dawid Sz <szostid@gmail.com>"]
description = "A program to convert triangle meshes to voxels."
edition = "2024"
keywords = ["3d", "Voxel", "magicavoxel", "gltf", "cli"]
categories = ["command-line-utilities", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/szostid/voxquant"

[workspace.dependencies]
voxquant_core = { path = "crates/voxquant_core", version = "0.4.0" }
voxquant_gltf = { path = "crates/voxquant_gltf", version = "0.4.0" }
voxquant_dotvox = { path = "crates/voxquant_dotvox", version = "0.4.0" }

image = { version = "0.25", default-features = false }
clap = "4.5"
glam = "0.30"
quantette = "0.5"
bytemuck = "1.24"
anyhow = "1.0"
rayon = "1.11"
profiling = "1.0"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# there's a lot of quantization that has to be done here 
# so generally these are OK to ignore
cast_possible_truncation = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_lossless = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }

[workspace.lints.rust]
missing_docs = "warn"
unused_crate_dependencies = "warn"
