[package]
name = "voxquant"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
image = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
quantette = { workspace = true, optional = true }
bytemuck.workspace = true
anyhow.workspace = true
rayon.workspace = true
profiling.workspace = true

voxquant_core.workspace = true
voxquant_gltf.workspace = true
voxquant_dotvox.workspace = true

[features]
default = ["dynamic_palette"]
dynamic_palette = ["dep:quantette"]
