[package]
name = "voxquant"
version = "0.4.3"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true

voxquant_core.workspace = true
voxquant_gltf.workspace = true
voxquant_dotvox.workspace = true

[lints]
workspace = true
