[package]
name = "voxquant"
version = "0.4.3"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = { workspace = true, features = ["derive"] }
voxquant_core = { workspace = true, features = ["clap"] }
voxquant_gltf = { workspace = true, features = ["clap"] }
voxquant_dotvox = { workspace = true, features = ["clap"] }

[lints]
workspace = true
