[package]
name = "voxquant_core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
image = { workspace = true, default-features = false }
clap = { workspace = true, features = ["derive"] }
glam = { workspace = true, features = ["bytemuck"] }
anyhow.workspace = true
profiling.workspace = true

[lints]
workspace = true
