[package]
name = "voxquant_core"
version = "0.4.3"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
image = { workspace = true, default-features = false }
clap = { workspace = true, optional = true, features = ["derive"] }
glam.workspace = true
profiling.workspace = true

[lints]
workspace = true
