[package]
name = "voxquant_dotvox"
version = "0.4.3"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
dot_vox = "5.2"
voxquant_core.workspace = true
clap.workspace = true
glam.workspace = true
image.workspace = true
profiling.workspace = true
anyhow.workspace = true
rayon.workspace = true
quantette = { workspace = true, optional = true }

[features]
default = ["dynamic_palette"]
dynamic_palette = ["dep:quantette"]

[lints]
workspace = true
