[package]
name = "voxquant_dotvox"
version = "0.5.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
dot_vox = "5.2"
voxquant_core.workspace = true
glam.workspace = true
profiling.workspace = true
rayon.workspace = true
clap = { workspace = true, optional = true, features = ["derive"] }
quantette = { workspace = true, optional = true }

[features]
default = ["dynamic_palette"]
dynamic_palette = ["dep:quantette"]
clap = ["dep:clap"]

[lints]
workspace = true
