[package]
name = "voxquant_gltf"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
gltf = { version = "1.4", default-features = false, features = [
    "import",
    "utils",
    "KHR_materials_pbrSpecularGlossiness",
] }
voxquant_core.workspace = true
glam.workspace = true
image.workspace = true
bytemuck.workspace = true
profiling.workspace = true
anyhow.workspace = true
rayon.workspace = true

[lints]
workspace = true
