[package]
name = "voxquant_gltf"
version = "0.5.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
gltf = { version = "1.4", default-features = false, features = [
    "import",
    "utils",
    "KHR_materials_pbrSpecularGlossiness",
] }

clap = { workspace = true, optional = true, features = ["derive"] }
voxquant_core.workspace = true
glam.workspace = true
image.workspace = true
bytemuck.workspace = true
profiling.workspace = true
thiserror.workspace = true
rayon.workspace = true

[features]
clap = ["dep:clap"]

[lints]
workspace = true
